# Image-Extractor

./: .gitignore  Cargo.toml  LICENSE  README.md  food_label.txt
src/: main.rs
