[package]
name = "Image-Extractor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "*", features = ["attributes", "unstable"]}
anyhow = "*"
image = "*"
futures = "*"
uuid = {version = "*", features = ["v4"]}